LockChunk + Release